force-app/main/default/objects/LLC_BI__CFG_ConfigKey__c/LLC_BI__CFG_ConfigKey__c.object-meta.xml
<CustomObject>
    <description>Config Keys tell the system in what specific instances actions should be taken</description>
    <label>CFG_ConfigKey</label>
    <nameField>
        <label>CFG_ConfigType Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CFG_ConfigKeys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>