force-app/main/default/objects/LLC_BI__CFG_ConfigKey__c/fields/LLC_BI__Action_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Action_Display_Name__c</fullName>
    <description>An administrator populates this optional picklist to add the name of the custom modification that should appear to the user in the Relationship Credit Action workflow. By default, it includes Modification and Renewal.</description>
    <label>Action Display Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Modification</fullName>
            </value>
            <value>
                <fullName>Borrowing Structure Adjustment</fullName>
            </value>
            <value>
                <fullName>Collateral Adjustment</fullName>
            </value>
            <value>
                <fullName>Rate Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>