force-app/main/default/objects/LLC_BI__CFG_ConfigKey__c/fields/LLC_BI__Action_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Action_Name__c</fullName>
    <description>This picklist field controls the name of the specific action an admin configures, such as Short Term Extension or Modify.</description>
    <label>Action Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Short Term Extension</fullName>
            </value>
            <value>
                <fullName>Renew</fullName>
            </value>
            <value>
                <fullName>Modify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>